--- a/miniprogram/pages/change/change.wxml
+++ b/miniprogram/pages/change/change.wxml
@@ -1,7 +1,10 @@
 <!--pages/change/change.wxml-->
 <view class='container'>
   <view class='list'>
-    <view class='item' wx:for="{{langList}}" wx:for-item="language" wx:key="index" data-chs="{{language.chs}}" data-lang="{{language.lang}}" data-index="{{language.index}}" bindtap='onChooseLang'>{{language.chs}}
+    <view class='item' hidden="{{refer == 'cur'}}" data-chs="自动检测" data-lang="auto" data-index="999" bindtap='onChooseLang'>自动检测
+      <icon class='iconfont icon-right' wx:if="{{chooseIndex == 999}}" ></icon>
+    </view>
+    <view class='item' wx:for="{{langList}}" wx:for-item="language" wx:key="index" data-chs="{{language.chs}}" data-lang="{{language.lang}}" data-index="{{language.index}}" bindtap='onChooseLang' wx:if="{{language.index < 8}}">{{language.chs}}
       <icon class='iconfont icon-right' wx:if="{{chooseIndex == index}}" ></icon>
     </view>
   </view>
